test/corpus/if_statements.txt
==================
Basic if statement
==================

if a < 0 {
  return -1
}

---

(source_file
  (if_statement
    (if)
    condition: (binary_expression
      left: (identifier)
      operator: (comparative_operator)
      right: (number_literal))
    consequence: (block
      (return_statement
        (return)
        (unary_expression
          operand: (number_literal))))))

==================
If with else branch
==================

if a < 0 {
  return -1
} else {
  return 1
}

---

(source_file
  (if_statement
    (if)
    condition: (binary_expression
      left: (identifier)
      operator: (comparative_operator)
      right: (number_literal))
    consequence: (block
      (return_statement
        (return)
        (unary_expression
          operand: (number_literal))))
    (else)
    alternative: (block
      (return_statement
        (return)
        (number_literal)))))

==================
If with else if and else branches
==================

if a < 0 {
  return -1
} else if a == 0 {
  return 0
} else {
  return 1
}

---

(source_file
  (if_statement
    (if)
    condition: (binary_expression
      left: (identifier)
      operator: (comparative_operator)
      right: (number_literal))
    consequence: (block
      (return_statement
        (return)
        (unary_expression
          operand: (number_literal))))
    (else)
    alternative: (if_statement
      (if)
      condition: (binary_expression
        left: (identifier)
        operator: (comparative_operator)
        right: (number_literal))
      consequence: (block
        (return_statement
          (return)
          (number_literal)))
      (else)
      alternative: (block
        (return_statement
          (return)
          (number_literal))))))

==================
If with initialization statement
==================

if a := foo(); a < 0 {
  return -1
}

---

(source_file
  (if_statement
    (if)
    initialization: (variable_declaration
      name: (identifier)
      value: (function_call
        function: (identifier)
        arguments: (argument_list)))
    condition: (binary_expression
      left: (identifier)
      operator: (comparative_operator)
      right: (number_literal))
    consequence: (block
      (return_statement
        (return)
        (unary_expression
          operand: (number_literal))))))

==================
If with initialization and complex branches
==================

if val := compute(); val < 0 {
  return "negative"
} else if val == 0 {
  return "zero"
} else {
  return "positive"
}

---

(source_file
  (if_statement
    (if)
    initialization: (variable_declaration
      name: (identifier)
      value: (function_call
        function: (identifier)
        arguments: (argument_list)))
    condition: (binary_expression
      left: (identifier)
      operator: (comparative_operator)
      right: (number_literal))
    consequence: (block
      (return_statement
        (return)
        (string_literal)))
    (else)
    alternative: (if_statement
      (if)
      condition: (binary_expression
        left: (identifier)
        operator: (comparative_operator)
        right: (number_literal))
      consequence: (block
        (return_statement
          (return)
          (string_literal)))
      (else)
      alternative: (block
        (return_statement
          (return)
          (string_literal))))))

==================
If with assignment initialization
==================

if count = getCount(); count > 10 {
  return a > 0? true: false
}

---

(source_file
  (if_statement
    (if)
    initialization: (assignment_statement
      left: (identifier)
      operator: (assignment_operator)
      right: (function_call
        function: (identifier)
        arguments: (argument_list)))
    condition: (binary_expression
      left: (identifier)
      operator: (comparative_operator)
      right: (number_literal))
    consequence: (block
      (return_statement
        (return)
        (ternary_expression
          condition: (binary_expression
            left: (identifier)
            operator: (comparative_operator)
            right: (number_literal))
          consequence: (boolean_literal
            (true))
          alternative: (boolean_literal
            (false)))))))
